# revive

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS_PLAN.md  PLAN.md  PROMPT.md  README.md  REGRESSION_ANALYSIS.md  SECURITY.md  SUPPORT.md  TROUBLESHOOTING.md  WALKTHROUGH.md  manifest.yaml  progress.md  pyproject.toml  regression_gap_analysis.html  regression_gap_analysis.md  walkthrough.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: example_zshrc
docs/: README.md  extending.md  manifest-reference.md  new-machine.md  plugins.md  security.md
scripts/: install.sh  uninstall.sh
src/rv/: __init__.py  __main__.py
src/rv/cli/: __init__.py  main.py  tui.py
src/rv/gui/: __init__.py  server.py
src/rv/logging/: __init__.py  audit.py
src/rv/models/: __init__.py  manifest.py  transaction.py  workspace.py
src/rv/plugins/: __init__.py  context.py  loader.py  sandbox.py  sandbox_wrapper.py
tests/: conftest.py  test_audit.py  test_backup.py  test_cli.py  test_coverage_booster.py  test_doctor.py  test_gui.py  test_models.py  test_plugins.py  test_providers.py  test_recovery.py  test_security.py  test_services.py  test_status.py  test_target_arrays.py  test_transactions.py  test_tui.py  test_utils.py  test_watch.py  test_workspace_service.py
tests/integration/: Dockerfile.alpine  Dockerfile.arch  Dockerfile.ubuntu  test_full_lifecycle.py
(+45 files in other folders)
